# rainfall-data-workbench

./: .gitignore  .uc_rainfall_gui_action_result.json  .uc_rainfall_gui_context.json  .uc_rainfall_gui_last_run.json  .uc_rainfall_gui_log.txt  .uc_rainfall_gui_widget_tree.json  .uc_rainfall_settings.json  CHANGELOG.md  README.md  RainfallGraphCreator_v0.1.0.spec  pyproject.toml  run_uc_rainfall_gui.py  temp.txt  test.csv  グラフ指示.txt  存在しない.txt
.github/workflows/: release.yml
config/uc_rainfall_zipflow/: gui_help.txt  gui_state.json
docs/uc_download_automation/: detail_design.md  experiment_results.md  overview.md  requirements.md  tasks.md  usage.md
docs/uc_rainfall_processing/: design.md  detail_design.md  gui_design.md  gui_implementation_plan.md  requirements.md  spatial_view_design.md  tasks.md
docs/uc_rainfall_zipflow/: design.md  detailed_design.md  gui_design.md  jaxa_mode_investigation.md  overview.md  requirements.md  requirements_engine_benchmark.md  requirements_excel_mode.md  style_tuner_requirements.md  style_tuner_tasks.md  tasks.md  test_spec.md  uc_rainfall_zipflow_gui_wireframe.pen  usage.md  usage_gui.md
excel_candidates/: 2010-2025_ティーセン候補日付リスト.csv  2010-2025_ティーセン候補日付一覧_unique.csv
rust/weighted_core/: Cargo.toml
rust/weighted_core_pyo3/: Cargo.toml
scripts/: compute_osakasayama_bboxes.py  graph_mail_probe.py  outlook_mail_probe.py  pyo3_wheel.ps1  uc_download_playwright_probe.py
scripts/release/: extract_changelog.py
src/: from_jaxa.py
src/uc_download/: __init__.py  browser.py  cli.py  config.py  continuity_checker.py  download_store.py  gui.py  mail_parser.py  models.py  period_planner.py  result_store.py  selectors.py  zip_downloader.py
src/uc_rainfall/: __init__.py  cli.py  db.py  models.py  schema.py  settings_store.py
src/uc_rainfall_zipflow/: __init__.py  application.py  benchmark_engine.py  cli.py  errors.py  excel_application.py  graph_builder.py  graph_renderer_reference.py  logger.py  models.py  raster_writer.py  regions.py  run_gui.py  runtime_engine.py  runtime_paths.py  spatial_clip.py  style_profile.py  style_tuner_core.py  style_tuner_gui.py  time_series_builder.py  zip_reader.py  zip_selector.py
tests/: conftest.py
tests/unit/: test_a4_merge_layout.py  (+8 more)
(+87 files in other folders)
