[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rainfall_graph_creator"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "jaxa-earth",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "playwright",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
jaxa-earth = { url = "https://data.earth.jaxa.jp/api/python/v0.1.4/en/_downloads/c1dbe3f6901b028a5ee3a4f25519a590/jaxa-earth-0.1.4.zip" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.4.2",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
    "maturin>=1.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests/unit", "tests/integration"]
